# DanmaKu

./: .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  README.md  build.sh
.github/workflows/: build-release.yml
cmake/: DanmakuFactoryConfig.cmake.in  ios.toolchain.cmake
examples/swift/: DanmakuConverter.swift  DanmakuFactory-Bridging-Header.h  ExampleUsage.swift
src/: CDanmakuFactory.h
src/AssFile/: AssFile.c  AssFile.h  AssStringProcessing.h
src/Config/: Config.h
src/Define/: Status.h
src/List/: DanmakuFactoryList.h
src/String/: DanmakuFactoryString.h
src/TemplateFile/: TemplateFile.h
